// Original file: exa/cascade_plugins_pb/cascade_plugins.proto

import type { McpClientInfo as _exa_cascade_plugins_pb_McpClientInfo, McpClientInfo__Output as _exa_cascade_plugins_pb_McpClientInfo__Output } from '../../exa/cascade_plugins_pb/McpClientInfo';

export interface GetMcpClientInfosResponse {
  'clientInfos'?: ({[key: string]: _exa_cascade_plugins_pb_McpClientInfo});
}

export interface GetMcpClientInfosResponse__Output {
  'clientInfos': ({[key: string]: _exa_cascade_plugins_pb_McpClientInfo__Output});
}
